--- a/index.html
+++ b/index.html
@@ -37,5 +37,14 @@
         </section>
     </div>
     <script src="script.js"></script>
+
+  <div class="menu-boczne">
+    <h3>🎨 Wygląd GUI</h3>
+    <button onclick="setTheme('theme-default')">Czarno-Zielony</button>
+    <button onclick="setTheme('theme-blue')">Czarno-Niebieski</button>
+    <button onclick="setTheme('theme-purple')">Czarno-Fioletowy</button>
+    <button onclick="setTheme('theme-yellow')">Czarno-Żółty</button>
+  </div>
+  <script src="theme.js"></script>
 </body>
 </html>
